objects/Service_Contract_Business_Hours__c.object
<CustomObject>
    <fields>
        <fullName>Business_Hours_Name__c</fullName>
        <formula>Business_Hours__r.Name</formula>
        <label>Business Hours Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Hours__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Hours</label>
        <referenceTo>BusinessHours</referenceTo>
        <relationshipName>el_Service_Contract_Business_Hours</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Unit</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Media</fullName>
                </value>
                <value>
                    <fullName>Networking</fullName>
                </value>
                <value>
                    <fullName>Playout</fullName>
                </value>
                <value>
                    <fullName>Transmission</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country_Name__c</fullName>
        <formula>Country__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Region__c</fullName>
        <formula>Country__r.Global_Region__c</formula>
        <label>Country Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>el	  Service Contract Business Hours</relationshipLabel>
        <relationshipName>el_Service_Contract_Business_Hours</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <formula>NULLVALUE(Product__r.Part_No__c, &quot;&quot;) &amp; &quot; &quot; &amp; NULLVALUE( Country__r.ISO_Name__c, &quot;&quot;) &amp; &quot; &quot; &amp; NULLVALUE(   Formula_Region__c , &quot;&quot;) &amp; &quot; &quot; &amp; NULLVALUE(  TEXT(Business_Unit__c), &quot;&quot;)  &amp; &quot; &quot; &amp; NULLVALUE( Business_Hours__r.Name, &quot;&quot;)</formula>
        <label>Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Formula_Region__c</fullName>
        <formula>BLANKVALUE(TEXT( Region_Override__c ),  Country__r.Global_Region__c )</formula>
        <label>Formula Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>el	  Service Contract Business Hours</relationshipLabel>
        <relationshipName>el_Service_Contract_Business_Hours</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Region_Override__c</fullName>
        <label>Region Override</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ASIA</fullName>
                </value>
                <value>
                    <fullName>CALA</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>NORTH AMERICA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Service Contract Business Hour</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Business_Hours__c</columns>
        <columns>Business_Unit__c</columns>
        <columns>Product__c</columns>
        <columns>Country__c</columns>
        <columns>Country_Region__c</columns>
        <columns>Region_Override__c</columns>
        <columns>Formula_Region__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>I-{00000000}</displayFormat>
        <label>Service Contract Business Hours Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Contract Business Hours</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>